--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,18 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+### Java-Web ###
+## ignoring target file
+target/
+
+# End of https://www.toptal.com/developers/gitignore/api/java,java-web
+
+### IntelliJ ###
+out/
+.idea/
+*.iml
+
+test-config.json
+!maven-repo/**/*.jar
+FsDemoAppTest.java
